Fourth numerical commit

--- a/Numerical_methods/eigenvalues/Makefile
+++ b/Numerical_methods/eigenvalues/Makefile
@@ -4,10 +4,10 @@ mkfname = $(word $(word $(MAKEFILE_LIST)), $(MAKEFILE_LIST) )
 all: out_cyclic.txt out_ebye.txt time_cyclic.txt time_ebye.txt plot_time.svg
 
 out_cyclic.txt: main_cyclic.py eigen.py matrix_codes.py
-	python3 $<
+	python3 $< > $@
 
 out_ebye.txt: main_ebye.py eigen.py matrix_codes.py
-	python3 $<
+	python3 $< > $@
 
 time_cyclic.txt: main_cyclic.py eigen.py matrix_codes.py
 	for n in `seq 2 1 14`; do \
