--- a/Numerical_methods/eigenvalues/Makefile
+++ b/Numerical_methods/eigenvalues/Makefile
@@ -1,13 +1,12 @@
 PYTHON = python3 -00
 mkfname = $(word $(word $(MAKEFILE_LIST)), $(MAKEFILE_LIST) )
 
-all: out_cyclic.txt out_ebye.txt time_cyclic.txt time_ebye.txt plot_time.svg
+all: out_all.txt time_cyclic.txt time_ebye.txt plot_time.svg
 
-out_cyclic.txt: main_cyclic.py eigen.py matrix_codes.py
+out_all.txt: main_cyclic.py main_ebye.py time_dif.py eigen.py matrix_codes.py
 	python3 $< > $@
-
-out_ebye.txt: main_ebye.py eigen.py matrix_codes.py
-	python3 $< > $@
+	python3 main_ebye.py >> $@
+	python3 time_dif.py >> $@
 
 time_cyclic.txt: main_cyclic.py eigen.py matrix_codes.py
 	for n in `seq 2 1 14`; do \
